fixed handling loading and failures

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NewsAggregator</string>
     <string name="sorted_str">sorted</string>
+    <string name="update_str">UPDATE</string>
 </resources>
